// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataField есть корректный снимок 1`] = `
<div
  className="DataFieldTest"
/>
`;

exports[`DataField есть корректный снимок 2`] = `
<span>
  Возраст
</span>
`;

exports[`DataField есть корректный снимок 3`] = `
<span>
  Пол
</span>
`;

exports[`DataField есть корректный снимок 4`] = `
<div
  className="form-group"
>
  <label
    className="font-weight-bold small mb-1 form-label"
    htmlFor="formTest"
  >
    Рост
  </label>
  <input
    className="form-control"
    id="formTest"
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <small
    className="text-muted form-text"
  />
</div>
`;

exports[`DataField есть корректный снимок 5`] = `
<div
  className="form-group"
>
  <label
    className="font-weight-bold small mb-1 form-label"
    htmlFor="formTest"
  >
    Вес
  </label>
  <input
    className="form-control"
    id="formTest"
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <small
    className="text-muted form-text"
  />
</div>
`;
